--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "eslint ./src --fix && tsc -b && vite build",
+    "lint": "eslint ./src --fix",
     "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "async-mutex": "^0.5.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -19,17 +20,18 @@
     "sass": "^1.78.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
+    "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^9.12.0",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint": "^9.13.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.11.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.8.1",
+    "typescript-eslint": "^8.12.2",
     "vite": "^5.4.1"
   }
 }
