--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "nodemon": "^3.1.4",
     "process": "^0.11.10",
     "uuid": "^10.0.0",
-    "vercel": "^37.4.0"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -37,6 +37,7 @@
     "@types/node": "^22.7.0",
     "@types/nodemailer": "^6.4.16",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.5.13",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
