--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT = 5000
 DB_URL = "mongodb+srv://dima22sw03:tH677yZqPlMZdT6Z@cluster0.jvp0w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 API_URL="http://localhost:5000"
 CLIENT_URL="http://localhost:5173"
+JWT_ACCESS_SECRET=jwt_secret_key
+JWT_REFRESH_SECRET=jwt_refresh_secret_key
