--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "async-mutex": "^0.5.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "i18next": "^24.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-use-websocket": "^4.10.1",
+    "recharts": "^2.15.1",
     "sass": "^1.78.0"
   },
   "devDependencies": {
